# freezer-ui

./: Cargo.toml  rustfmt.toml
src/: client.rs  main.rs  model.rs
src/utils/: error.rs  macros.rs  mod.rs
src/views/: list.rs  log.rs  mod.rs  preview.rs
tools/hex-colors/: Cargo.toml
tools/hex-colors/src/: lib.rs
tools/hex-colors/tests/: basic.rs
