[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.5", features = ["debug", "system", "tokio", "image"] }
iced_native = "0.6"
iced_lazy = "0.2"
iced_graphics = "0.4"
iced_style = "0.5"

tokio = "1.21.2"

iced_aw = { git = "https://github.com/iced-rs/iced_aw", features = [
    "card",
    "colors",
    "modal",
] }

json = { package = "serde_json", version = "1.0" }
serde = { version = "1.0.147", features = ["derive"] }
reqwest = { version = "0.11.12", features = ["json"] }

bytes = "1.2.1"
futures = "0.3.25"
bytesize = "1.1.0"
tap = "1.0.1"

anyhow = "1.0.66"
tinyvec = "1.6.0"
once_cell = "1.16.0"

tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tracing-appender = "0.2.2"
